--- a/flutter_appauth/pubspec.yaml
+++ b/flutter_appauth/pubspec.yaml
@@ -10,7 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_appauth_platform_interface: ^4.0.0
+  
+  flutter_appauth_platform_interface:
+    git:
+      url: 'https://github.com/alzacz/flutter_appauth.git'
+      ref: 'master'
+      path: flutter_appauth_platform_interface
 
 flutter:
   plugin:
